--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Name</label>
-      <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+      <input type="text" required class="form-control" id="inputEmail4" placeholder="Name">
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Place</label>
-      <input type="text" class="form-control" id="inputPassword4" placeholder="Place">
+      <input type="text" required class="form-control" id="inputPassword4" placeholder="Place">
     </div>
   </div>
 
@@ -196,7 +196,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Mobile</label>
-      <input type="tel" class="form-control" id="inputPassword4" placeholder="Mobile">
+      <input type="tel" required class="form-control" id="inputPassword4" placeholder="Mobile">
     </div>
   </div>
 
