--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <div class="col-md-12">
 
-<form>
+<form action="/" method="GET">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Name</label>
@@ -187,12 +187,12 @@
       <label for="inputPassword4">Place</label>
       <input type="text" required class="form-control" id="inputPassword4" placeholder="Place">
     </div>
-  </div>
+  </div> 
 
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      <input type="email" required class="form-control" id="inputEmail4" placeholder="Email">
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Mobile</label>
