--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <div class="col-md-12">
 
-<form action="/" method="GET">
+<form>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Name</label>
